[package]
name = "da-primitives"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
# Others
log = { version = "0.4.8", default-features = false }
serde = { version = "1.0.121", optional = true, features = ["derive"] }

# Substrate
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
parity-util-mem = { version = "0.9.0", default-features = false, features = ["primitive-types"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"log/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"parity-util-mem/std",
]
