[package]
name = "sc-basic-authorship"
version = "0.10.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Basic implementation of block-authoring logic."
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
avail-base = { workspace = true, features = ["std"] }
avail-blob = { workspace = true, default-features = false }

codec = { package = "parity-scale-codec", version = "3.6.1" }
futures.workspace = true
futures-timer.workspace = true
log.workspace = true

substrate-prometheus-endpoint.workspace = true
sc-proposer-metrics.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool-api.workspace = true
sc-block-builder.workspace = true
sc-network.workspace = true
sc-keystore.workspace = true
sc-authority-discovery.workspace = true

sp-api = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-consensus.workspace = true
sp-transaction-pool = { workspace = true, features = ["std"] }

[dev-dependencies]
parking_lot.workspace = true
sc-client-api.workspace = true
sc-transaction-pool.workspace = true
# substrate-test-runtime-client.workspace = true
